[package]
name = "hikami_zicfiss"
version = "0.1.0"
edition = "2024"

[lints.clippy]
pedantic = "warn"
missing_docs_in_private_items = "warn"

[lints.rust]
missing_docs = "warn"

[lints.rustdoc]
missing_crate_level_docs = "warn"

[dependencies]
raki = "1.3.1"
spin = "0.9.8"
hikami_core = { path = "../hikami/hikami_core" }
